--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import "./mixins";
+@import './mixins';
 
 html {
   box-sizing: border-box;
@@ -19,7 +19,7 @@ body {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: white;
   color: #333;
   font-size: 1.8rem;
@@ -51,8 +51,8 @@ a {
 
 a,
 button,
-input[type="submit"],
-input[type="button"] {
+input[type='submit'],
+input[type='button'] {
   cursor: pointer;
 
   &[disabled] {
